# SignalsAndSlots

./: CMakeLists.txt  README.md  create.bat  create.sh  main.cpp
include/: XApplication.hpp  XBuffer.hpp  XConnect.hpp  XConnectSavor.hpp  XNoCopy.hpp  XObject.hpp  XSerializer.hpp  XSingleton.hpp  XTraits.hpp  concept_requires.hpp  spinlock_mutex .hpp
